[package]
name = "plan-a"
version = "0.1.0"
edition = "2021"

[dependencies]
adb_client = "1.0.6"
chrono = "0.4.38"
image = "0.24"
imageproc = "0.23"
mdns-sd = "0.11.3"
ocrs = "0.9.0"
regex = "1.10.6"
serde = { version = "1.0.210", features = ["derive"] }
template-matching = { version = "0.2.0", features = ["image"] }
toml = { version = "0.8.19", features = ["parse"] }

[patch.crates-io]
adb_client = { path = "../adb_client/adb_client" }

[profile.dev.package.ocrs]
opt-level = 3
