[package]
name = "plan-a"
version = "0.1.0"
edition = "2021"

[dependencies]
adb_client = "2.0.0"
chrono = "0.4.38"
image = "0.24"
image_new = { version = "0.25", package = "image" }
imageproc = "0.23"
mdns-sd = "0.11.3"
mlua = { version = "0.9.9", features = ["lua54", "vendored"] }
ocrs = "0.9.0"
pathfinding = "4.11.0"
regex = "1.10.6"
rten = "0.13"
serde = { version = "1.0.210", features = ["derive"] }
template-matching = { version = "0.2.0", features = ["image"] }
toml = { version = "0.8.19", features = ["parse"] }

[patch.crates-io]
adb_client = { path = "../adb_client/adb_client" }

[profile.dev.package.ocrs]
opt-level = 3
